--- a/gdellapeProject-master/web/WEB-INF/web.xml
+++ b/gdellapeProject-master/web/WEB-INF/web.xml
@@ -51,6 +51,16 @@
         <filter-name>AuthenticationFilter</filter-name>
         <url-pattern>/account/*</url-pattern>
         <url-pattern>/pdfview/*</url-pattern>
+        <url-pattern>/admin/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>AdmistrationFilter</filter-name>
+        <filter-class>filter.AdmistrationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AdmistrationFilter</filter-name>
+        <url-pattern>/admin/*</url-pattern>
     </filter-mapping>
     <!-- /filtri -->
 
@@ -394,7 +404,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>gestione-tirocinanti</servlet-name>
-        <url-pattern>/gestione-tirocinanti</url-pattern>
+        <url-pattern>gestione-tirocinanti</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>gestione-admin</servlet-name>
