--- a/gdellapeProject-master/web/WEB-INF/web.xml
+++ b/gdellapeProject-master/web/WEB-INF/web.xml
@@ -418,38 +418,39 @@
 
     </servlet-mapping>
 
-<!--    <servlet>-->
-<!--        <servlet-name>gestione-tirocinanti</servlet-name>-->
-<!--        <servlet-class>controller.adm.Admin.GestioneUtenza.ShowAllTirocinantiController</servlet-class>-->
-<!--    </servlet>-->
-<!--    <servlet-mapping>-->
-<!--        <servlet-name>gestione-tirocinanti</servlet-name>-->
-<!--        <url-pattern>gestione-tirocinanti</url-pattern>-->
-<!--    </servlet-mapping>-->
-<!--    <servlet>-->
-<!--        <servlet-name>gestione-admin</servlet-name>-->
-<!--        <servlet-class>controller.adm.Admin.GestioneUtenza.ShowAllAdminController</servlet-class>-->
-<!--    </servlet>-->
-<!--    <servlet-mapping>-->
-<!--        <servlet-name>gestione-admin</servlet-name>-->
-<!--        <url-pattern>/gestione-admin</url-pattern>-->
-<!--    </servlet-mapping>-->
-<!--    <servlet>-->
-<!--        <servlet-name>gestione-tutori</servlet-name>-->
-<!--        <servlet-class>controller.adm.Admin.GestioneUtenza.ShowAllTutoriController</servlet-class>-->
-<!--    </servlet>-->
-<!--    <servlet-mapping>-->
-<!--        <servlet-name>gestione-tutori</servlet-name>-->
-<!--        <url-pattern>/gestione-tutoti</url-pattern>-->
-<!--    </servlet-mapping>-->
-<!--    <servlet>-->
-<!--        <servlet-name>gestione-aziende</servlet-name>-->
-<!--        <servlet-class>controller.adm.Admin.GestioneUtenza.ShowAllAziendeController</servlet-class>-->
-<!--    </servlet>-->
-<!--    <servlet-mapping>-->
-<!--        <servlet-name>gestione-aziende</servlet-name>-->
-<!--        <url-pattern>/gestione-aziende</url-pattern>-->
-<!--    </servlet-mapping>-->
+    <servlet>
+        <servlet-name>gestione-tirocinanti</servlet-name>
+        <servlet-class>controller.adm.Admin.GestioneUtenza.ShowAllTirocinantiController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>gestione-tirocinanti</servlet-name>
+        <url-pattern>/admin/gestione-tirocinanti</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>gestione-admin</servlet-name>
+        <servlet-class>controller.adm.Admin.GestioneUtenza.ShowAllAdminController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>gestione-admin</servlet-name>
+        <url-pattern>/gestione-admin</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>gestione-tutori</servlet-name>
+        <servlet-class>controller.adm.Admin.GestioneUtenza.ShowAllTutoriController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>gestione-tutori</servlet-name>
+        <url-pattern>/gestione-tutoti</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>gestione-aziende</servlet-name>
+        <servlet-class>controller.adm.Admin.GestioneUtenza.ShowAllAziendeController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>gestione-aziende</servlet-name>
+        <url-pattern>/gestione-aziende</url-pattern>
+    </servlet-mapping>
 
 
 
@@ -606,16 +607,16 @@
     <!--<url-pattern>/modifica-admin</url-pattern>-->
 
     <!--</servlet-mapping>-->
-<!--    <servlet>-->
-<!--    <servlet-name>TutteOfferteTr</servlet-name>-->
-<!--    <servlet-class>controller.adm.Admin.GestioneTirocinio.OfferteTirocinioController</servlet-class>-->
-<!--    </servlet>-->
-<!--    <servlet-mapping>-->
-<!--    <servlet-name>TutteOfferteTr</servlet-name>-->
-<!--    <url-pattern>/OfferteTirocinioAdmin</url-pattern>-->
-<!--    <url-pattern>/offertetirocinioadmin</url-pattern>-->
+    <servlet>
+    <servlet-name>TutteOfferteTr</servlet-name>
+    <servlet-class>controller.adm.Admin.GestioneTirocinio.OfferteTirocinioController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+    <servlet-name>TutteOfferteTr</servlet-name>
+    <url-pattern>/OfferteTirocinioAdmin</url-pattern>
+    <url-pattern>/offertetirocinioadmin</url-pattern>
 
-<!--    </servlet-mapping>-->
+    </servlet-mapping>
 
     <!--<servlet>-->
     <!--<servlet-name>ModificaOffertaAdmin</servlet-name>-->
